stefi:fehlerbehebung